# claude-monitor

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/superpowers/plans/: 2026-04-04-claude-monitor.md
docs/superpowers/specs/: 2026-04-04-claude-monitor-design.md
src/claude_monitor/: cli.py  config.py  hook_server.py  monitor.py  scraper.py  service.py  state.py  telegram_bot.py
tests/: test_config.py  test_hook_server.py  test_integration.py  test_monitor.py  test_scraper.py  test_state.py  test_telegram_bot.py
