[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claude-monitor"
version = "0.1.0"
description = "Monitor Claude Code in tmux, get Telegram notifications, send input remotely"
requires-python = ">=3.10"
dependencies = [
    "python-telegram-bot>=21.0",
    "pyyaml>=6.0",
    "click>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[project.scripts]
claude-monitor = "claude_monitor.cli:main"
